--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "postcss-preset-env": "^7.8.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
