--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
       "bcryptjs": "^2.4.3",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.13.2",
+      "cors": "^2.8.5",
       "express": "^4.18.1",
       "morgan": "^1.10.0",
       "nodemon": "^2.0.19",
@@ -24,6 +25,7 @@
    },
    "devDependencies": {
       "@types/bcryptjs": "^2.4.2",
+      "@types/cors": "^2.8.12",
       "@types/express": "^4.17.13",
       "@types/morgan": "^1.9.3",
       "@types/node": "^16.11.10",
