--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
    "description": "",
    "main": "server.ts",
    "scripts": {
-      "start": "ts-node src/index.ts",
-      "dev": "nodemon --exec ts-node ./src/server.ts",
+      "start": "ts-node src/server.ts",
+      "dev": "env-cmd -f .env.development nodemon --exec ts-node ./src/server.ts",
+      "start:production": "env-cmd -f .env.production ts-node ./src/server.ts",
       "test": "echo \"Error: no test specified\" && exit 1",
       "typeorm": "typeorm-ts-node-commonjs"
    },
@@ -19,6 +20,7 @@
       "cookie-parser": "^1.4.6",
       "cors": "^2.8.5",
       "dotenv": "^16.0.1",
+      "env-cmd": "^10.1.0",
       "express": "^4.18.1",
       "jsonwebtoken": "^8.5.1",
       "morgan": "^1.10.0",
