--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_SERVER_BASE_URL=http://ec2-3-101-28-122.us-west-1.compute.amazonaws.com:4000
+NEXT_PUBLIC_SERVER_BASE_URL=http://ec2-3-36-75-140.ap-northeast-2.compute.amazonaws.com:4000
