--- a/server/.env.production
+++ b/server/.env.production
@@ -1,7 +1,7 @@
 PORT=4000
 NODE_ENV=production
-APP_URL=http://ec2-3-101-28-122.us-west-1.compute.amazonaws.com:4000
-ORIGIN=http://ec2-3-101-28-122.us-west-1.compute.amazonaws.com
+APP_URL=ec2-3-36-75-140.ap-northeast-2.compute.amazonaws.com:4000
+ORIGIN=ec2-3-36-75-140.ap-northeast-2.compute.amazonaws.com
 
 JWT_SECRET=super_secret
 
