Test: url EC2 탄력적 주소로 수정

--- a/server/.env.production
+++ b/server/.env.production
@@ -1,6 +1,6 @@
 PORT=4000
 NODE_ENV=production
-APP_URL=http://ec2-15-165-111-70.ap-northeast-2.compute.amazonaws.com:4000
-ORIGIN=http://ec2-15-165-111-70.ap-northeast-2.compute.amazonaws.com
+APP_URL=http://15.165.111.70:4000
+ORIGIN=http://15.165.111.70
 
 JWT_SECRET=super_secret
