--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_SERVER_BASE_URL=http://ec2-15-165-111-70.ap-northeast-2.compute.amazonaws.com:4000
+NEXT_PUBLIC_SERVER_BASE_URL=http://15.165.111.70:4000
