--- a/server/.env.production
+++ b/server/.env.production
@@ -1,6 +1,6 @@
 PORT=4000
 NODE_ENV=production
-APP_URL=http://15.165.111.70:4000
-ORIGIN=http://15.165.111.70
+APP_URL=http://ec2-52-79-236-103.ap-northeast-2.compute.amazonaws.com:4000
+ORIGIN=http://ec2-52-79-236-103.ap-northeast-2.compute.amazonaws.com
 
 JWT_SECRET=super_secret
