--- a/server/.env.production
+++ b/server/.env.production
@@ -1,6 +1,6 @@
 PORT=4000
 NODE_ENV=production
-APP_URL=http://ec2-3-35-126-16.ap-northeast-2.compute.amazonaws.com:4000
+APP_URL=http://redditclone.xyz:4000
 ORIGIN=http://redditclone.xyz
 
 JWT_SECRET=super_secret
