Feat: https 적용으로 주소 수정

--- a/server/.env.production
+++ b/server/.env.production
@@ -1,6 +1,6 @@
 PORT=4000
 NODE_ENV=production
-APP_URL=http://redditclone.xyz:4000
-ORIGIN=http://redditclone.xyz
+APP_URL=https://redditclone.xyz:4000
+ORIGIN=https://redditclone.xyz
 
 JWT_SECRET=super_secret
