--- a/server/.env.production
+++ b/server/.env.production
@@ -1,6 +1,6 @@
 PORT=4000
 NODE_ENV=production
-APP_URL=https://redditclone.xyz:4000
-ORIGIN=https://redditclone.xyz
+APP_URL=//redditclone.xyz:4000
+ORIGIN=//redditclone.xyz
 
 JWT_SECRET=super_secret
