--- a/server/.env.production
+++ b/server/.env.production
@@ -1,6 +1,6 @@
 PORT=4000
 NODE_ENV=production
-APP_URL=//redditclone.xyz:4000
-ORIGIN=//redditclone.xyz
+APP_URL=http://redditclone.xyz:4000
+ORIGIN=http//redditclone.xyz
 
 JWT_SECRET=super_secret
